# pyxart

./: .gitignore  README.md  demo_client.py  demo_server.py  main.py  pyproject.toml  pyxart_pb2.py  pyxart_pb2_grpc.py  pyxart_servicer.py  test.py
group/: art_receiver.py
keys/: keypaircurve25519.py
src/pyxart/client/: client.py
src/pyxart/group/: __init__.py  art.py  art_receiver.py  tree.py
src/pyxart/protobuf/: pyxart.proto
src/pyxart/server/: server.py
tests/: test_group_creation.py
